# 3d-Model-Viewer

./: CMakeLists.txt  ModelViewer.qmlproject  ModelViewer.qmlproject.qtds  modelmanager.cpp  modelmanager.h  qds.cmake
App/: main.cpp
App/autogen/: environment.h
ModelViewer/: CMakeLists.txt  Constants.qml  qmldir
ModelViewer/designer/: plugin.metainfo
ModelViewerContent/: App.qml  CMakeLists.txt  Main.qml  ModelObject.qml
ModelViewerContent/components/: ComboBoxC.qml
ModelViewerContent/shaders/: fragmentShader.frag
